# question_answer_api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
app/: main.py
app/api/: __init__.py  health.py  qa.py
app/core/: security.py
app/schemas/: qa.py
app/services/: qa_service.py
database/: db.py  ingestion.py  model.py
settings/: config.py
src/: data_processing.py  embedding_models.py  retrieval_generation.py  vectorstore.py
